# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-02-16 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug 416 in FillPolygonTool (regression due to JTS change)
  * If a datastore table has several geometries, secondary geometries are
    read as AttributeType.OBJECT attributes rather than STRING so that
    datastore driver can easily write them back as a byte array.

2016-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #415 throwing exceptions in AttributeTablePanel

2016-02-01 mmichaud <m.michael.michaud@orange.fr>
  * Add new GroupByPlugIn in Tools>Analysis menu

2016-01-30
  * Fix for missing layers problem when loading projects that include rasters.

2016-01-21 bertazza@gmail.com
  * Quick fix for NullPointerException when loading a project containing
    raster(s) when no other projects (tasks) are open.

* release 1.9.0 ****************************************************************

2016-01-10 ede
  * linewrap and overall cutification of the extensions about panel
  * reroute jdbc loading issues into extensions about panel as a message
  * new OJ Logger, abstracts the actually used logging framework from the
    logging components 
    - adapted existing log4j calls to the new logger
    - streamline console & logfile formatting
    - streamline WorkbenchFrame.log() methods to use new logger
  * GenerateLogPlugIn shows last 1000 lines of all logger file appenders
  * introduce new commandline parameter to switch log verbosity '-v, -verbosity'
    utilizing the new Logger
  * fix NPE in 
    JUMPFeatureFactory.createFromDeegreeFC(JUMPFeatureFactory.java:415)
  * updated log4j to latest stable 1.2.17
  * update commons-io to latest commons-io-2.4
  * update commons-logging to latest commons-logging-1.2
  * update just released mariadb jdbc to 1.3.4
